--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "nodemon": "^3.0.1"
   },
   "dependencies": {
+    "ejs": "^3.1.6",
     "express": "^4.18.2",
-    "ejs": "^3.1.6"
+    "path": "^0.12.7"
   }
 }
